Added search path count analysis

--- a/config-sample.ini
+++ b/config-sample.ini
@@ -22,3 +22,7 @@ maxDistance = 0.2
 
 ; Sparsity parameter
 lambda = 0.05
+
+; number of top citation paths
+; we use them to collect the most important articles
+n_top_paths = 100
