clear input texts

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@
 /data/
 /data-c-t/
 /mk3-1/
+/mk1run1/
+/data-minuhin/
+/data-minuhin-2/
+/data-minuhin-3/
+/data-minuhin-4/
+/data-minuhin-5/
+/ontology-1/
