--- a/config-sample.ini
+++ b/config-sample.ini
@@ -3,23 +3,12 @@
 subscriptionKey=***********************
 restEndpoint={"protocol":"https", "host":"api.labs.cognitive.microsoft.com", "path":"/academic/v1.0/evaluate"}
 
-;dataDir = ./data-c-t
-;dataDir = ./data-pronunciation
-;dataDir = ./data-pavel-2
-;dataDir = ./data-pavel-3
-;dataDir = ./data-pavel-4
-;dataDir = ./data-pavel-5
-;dataDir = ./data-pavel-6
-;dataDir = ./data-sm
-;dataDir = ./data-ontology-2
-;dataDir = ./data-pronunciation-1
-;dataDir = ./data-pronunciation-2
-;dataDir = ./data-pronunciation-3
-dataDir = ./data-pronunciation-4
+
+dataDir = ./ontology-1
 
 ; probability the seed paper is kept in snowball seed
 ; we need sligntly vary the seed collection
-subsampleFraction=0.8
+subsampleFraction=1.0
 
 ; percentage of stop words to exclude
 Hmax = 0.02
