--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,4 @@
 /config.ini
-/data/out-*.*
-/data/tmp-*.*
-/data-pavel/
-/data-pronunciation/
-/data-sm/
-/data-ontology/
-/data-ontology-2/
-/data-pavel-2/
-/data-pavel-3/
-/data-pavel-4/
-/data-pavel-5/
-/data-pavel-6/
-/data-pronunciation-1/
-/data-pronunciation-2/
-/data-pronunciation-3/
-/data/
-/data-c-t/
-/mk3-1/
-/mk1run1/
-/data-minuhin/
-/data-minuhin-2/
-/data-minuhin-3/
-/data-minuhin-4/
-/data-minuhin-5/
-/ontology-1/
+_/
+data/
+/.idea/
