--- a/config-sample.ini
+++ b/config-sample.ini
@@ -1,10 +1,12 @@
 [main]
 
-subscriptionKey=***********************
+subscriptionKey=xxxxxxxxxxxxxxxxxxxx
 restEndpoint={"protocol":"https", "host":"api.labs.cognitive.microsoft.com", "path":"/academic/v1.0/evaluate"}
 
-
-dataDir = ./ontology-1
+; KL divergence + data-kl-robustness-test
+measure=kl
+dataDir = ./data-kl-robustness-test
+maxDistance = 0.25
 
 ; probability the seed paper is kept in snowball seed
 ; we need sligntly vary the seed collection
@@ -20,10 +22,7 @@ alpha = 0.05
 Pmax = 200
 
 ; number of the top topic words used to calculate the coherence
-nCoherenceWords = 50
-
-; max  distance between seed documents and unknown document
-maxDistance = 0.4
+nCoherenceWords = 10
 
 ; Sparsity parameter
 lambda = 0.05
@@ -31,6 +30,11 @@ lambda = 0.05
 ; number of top citation paths
 ; we use them to collect the most important articles
 min_in_degree = 3
-n_top_paths = 50
+n_top_paths = 500
 
-max_citation_net_nodes=5000
+
+max_citation_net_nodes=10000
+
+;n_nodes_list = [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000, 2200]
+;n_nodes_list = [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000]
+n_nodes_list = [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000, 2200, 2400, 2600, 2800, 3000, 3200, 3400, 3600, 3800, 4000, 4200, 4400, 4600, 4800]
